Update routes, pass data in routes, links in layout-header

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <template name="layout">
-    # HEADER #<br/>
+    # HEADER <a href="{{pathFor route='home' }}">home</a> <a href="{{pathFor route='about' }}">about</a> <a href="{{pathFor route='imprint' }}">imprint</a>#<br/>
     {{> yield}}
     # FOOTER #<br/>
 </template>
